[package]
name = "rad-clib"
version = "0.1.0"
authors = [ "Fintan Halpenny <fintan.halpenny@gmail.com>" ]
edition = "2018"
license = "GPL-3.0-or-later"

[lib]
doctest = true
test = false

[features]
unsafe = []

[dependencies]
async-global-executor = "2.0.2"
futures-lite = "1.12.0"
once_cell = "1.8"
serde_json = "1.0"
serde = "1.0"
thiserror = "1.0"
tokio = "1.11.0"
tracing = "0.1"

[dependencies.librad]
path = "../librad"

[dependencies.minicbor]
version = "0.9.1"
features = ["std"]

[dependencies.thrussh-agent]
git = "https://github.com/FintanH/thrussh"
branch = "generic-agent"
features = [ "tokio-agent" ]